# slides

bayhac2017/: slides.html  slides.md
bigtechday/: slides.md
dhall-intro/: dhall-intro.html  dhall-intro.md
eXchange2022/: script.sh  slides.md
evangelism/: marketing.md
forwardconf/: secure-scripts.md
lambdaconf/: bears.nix  category.md  data.md  foldl.nix  holothuriidae-pending.csv  release.nix  shell.nix  stack.yaml
lambdaconf/category/: category.md  release.nix
lambdaconf/category/examples/02/: Main.hs
lambdaconf/data/: bears.nix  data.md  holothuriidae-nomina-valid.csv  holothuriidae-specimens.csv  release.nix  shell.nix
lambdaconf/data/exercises/: examples.cabal
lambdaconf/data/exercises/00/: Main.hs
lambdaconf/data/exercises/01/: Main.hs
lambdaconf/data/exercises/02/: Main.hs
lambdaconf/data/exercises/03/: Main.hs
lambdaconf/data/exercises/04/: Main.hs
lambdaconf/data/exercises/06/: Main.hs
lambdaconf/data/exercises/08/: Main.hs
lambdaconf/examples/: default.nix  examples.cabal
lambdaconf/examples/00/: Main.hs
lambdaconf/examples/01/: Main.hs
lambdaconf/exercises/: 00.hs  01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  default.nix
lambdaconf/exercises/05/: Main.hs
lambdaconf/exercises/07/: Main.hs
liquidhaskell/: liquid.nix  shell.nix  slides.md  stack.yaml
liquidhaskell/examples/: counter.hs  delete.hs  head.hs  hello.hs  parser.hs  postcondition.hs  reject.hs  search.hs  splitAt.hs  static.hs
marketing/: marketing.md
modevar/: modevar.md
munihac/: foldmap.md
munihac2022/: script.sh  seeds.txt  slides.md
namespaced-debruijn/: slides.md
nix-derivation/: directory.nix  example0.nix  file.nix  goodbye.nix  hello.nix  impure.nix  redis.json  redis.nix  redis2.nix  redis3.nix  slides.md  slides.nix
nix-internals/: empty.drv  empty.nix  slides.md  touch.c
nix-package/: dev.nix  minimal.nix  recurse.nix  slides.md  tools.nix  tools2.nix
nixos/: slides.md
regex/: regex.md
simple-ci/: ChangeLog.md  LICENSE  config.nix  default.nix  logical.nix  physical.nix  shell.nix  simple-ci.cabal
simple-ci/src/: Main.hs
simple-twitter/: slides.md
svhaskell/: slides.md
zurihac/: bak  slides.html  slides.md
zurihac2023/: script.sh  slides.md
