name: examples
version: 1.0.0
license: BSD3
license-file: LICENSE
cabal-version: >= 1.18
build-type: Simple

executable example-00
    build-depends:
          base < 5
        , bytestring
    hs-source-dirs: 00
    main-is: Main.hs
    default-language: Haskell2010

executable example-01
    build-depends:
          base < 5
        , bytestring
        , cassava
        , containers
        , text
        , vector
    hs-source-dirs: 01
    main-is: Main.hs
    default-language: Haskell2010

executable example-02
    build-depends:
          base < 5
        , bytestring
        , cassava
        , containers
        , text
        , vector
    hs-source-dirs: 02
    main-is: Main.hs
    default-language: Haskell2010

executable example-03
    build-depends:
          base < 5
        , bytestring
        , cassava
        , text
        , vector
    hs-source-dirs: 03
    main-is: Main.hs
    default-language: Haskell2010

executable example-04
    build-depends:
          base < 5
        , bytestring
        , cassava
        , diagrams-lib
        , diagrams-svg
        , text
        , vector
    hs-source-dirs: 04
    main-is: Main.hs
    default-language: Haskell2010

executable example-05
    build-depends:
          base < 5
        , bytestring
        , cassava
        , text
        , vector
    hs-source-dirs: 05
    main-is: Main.hs
    default-language: Haskell2010

executable example-06
    build-depends:
          base < 5
        , bytestring
        , cassava
        , containers
        , lens
        , text
        , vector
    hs-source-dirs: 06
    main-is: Main.hs
    default-language: Haskell2010

executable example-07
    build-depends:
          base < 5
        , bytestring
        , cassava
        , text
        , vector
    hs-source-dirs: 07
    main-is: Main.hs
    default-language: Haskell2010

executable example-08
    build-depends:
          base < 5
        , bytestring
        , cassava
        , discrimination
        , text
        , vector
    hs-source-dirs: 08
    main-is: Main.hs
    default-language: Haskell2010
